--- a/index.html
+++ b/index.html
@@ -201,6 +201,55 @@
 
 <!-- TESTIMONIALS -->
 
+ <div>
+    <section id="testimonials" class="p-4 bg-dark text-white">
+      <div class="container">
+        <h3 class="text-center">WHAT OUR CUSTOMERS SAY ABOUT US</h3>
+        <div class="row text-center">
+          <div class="col">
+            <div class="slider">
+              <div>
+                <blockquote class="blockquote">
+                  <p class="mb-0">
+                    "I do believe that ISKA London enables an easy way to 
+                    find and most of all better rank your products on Amazon. 
+                    Thanks to MerchantWords, my business grows larger everyday!"
+                  </p>
+                  <footer class="blockquote-footer">John Doe From
+                    <cite title="Company 1">Company 1</cite>
+                  </footer>
+                </blockquote>
+              </div>
+              <div>
+                <blockquote class="blockquote">
+                  <p class="mb-0">
+                    "We wouldn't consider, at this point, even building a listing without the use of ISKA London. 
+                    Without optimizing it's going to be very difficult for people to find your great product."
+                  </p>
+                  <footer class="blockquote-footer">Sam Smith From
+                    <cite title="Company 2">Company 2</cite>
+                  </footer>
+                </blockquote>
+              </div>
+              <div>
+                <blockquote class="blockquote">
+                  <p class="mb-0">
+                    "I do believe that Iska London enables an easy way to find and most of all better rank your products on Amazon.
+                    Thanks to Iska London, my business grows larger everyday!".
+                  </p>
+                  <footer class="blockquote-footer">Meghan Williams From
+                    <cite title="Company 3">Company 3</cite>
+                  </footer>
+                </blockquote>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </div>
+  <br/>
+
 <!-- TESTIMONIALS End -->
 
 <!-- NEWSLETTER -->
