--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
    <!-- HOME HEADING SECTION  2-->
 
 
+
   <!-- HOME HEADING SECTION  2 End  -->
 
    <!-- PHOTO GALLERY 1.0 -->
@@ -160,9 +161,52 @@
 
     <!-- PHOTO GALLERY 1.0 End -->
 
-  <!-- VIDEO PLAY -->
+      <!-- VIDEO PLAY -->
 
+  <section id="video-play" class="text-center p-5 text-white">
+    <div class="dark-overlay">
+    <div class="container">
+      <div class="row">
+        <div class="col">
+
+          <h4>See What We Do</h4>
+          
+
+          <a href="#" class="video" data-video="https://www.youtube.com/embed/bk2p-qS7gyA" data-toggle="modal"data-target="#videoModal"> <i class="fas fa-play fa-3x"></i> </a>
+        
+        </div>
+      </div>
+    </div>
+    </div>
+  </section>
+
+  <!-- VIDEO PLAY End -->
+
+  <br>
+
+  <!-- VIDEO PLAY  
+
+    <section id="video-play" class="">
+
+      <div class="dark-overlay">
+        <div class="row">
+          <div class="col">
+            <div class="container p-5">
+              <a href="#" class="video" data-video="https://www.youtube.com/embed/bk2p-qS7gyA" data-toggle="modal"
+              data-target="#videoModal">
+                <i class="fas fa-play fa-3x"></i>
+              </a>
+              <h3>See What We Do</h3>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+   -->
+ 
   <!-- VIDEO PLAY End-->
+
+
 
     <!-- VIDEO MODAL -->
   <div class="modal fade" id="videoModal">
