--- a/index.html
+++ b/index.html
@@ -163,16 +163,16 @@
 
       <!-- VIDEO PLAY -->
 
-  <section id="video-play" class="text-center p-5 text-white">
+  <section id="video-play" class="text-center py-5 text-white">
     <div class="dark-overlay">
     <div class="container">
       <div class="row">
         <div class="col">
 
-          <h4>See What We Do</h4>
+          <h4 class="py-4 text-danger">See What We Do</h4>
           
 
-          <a href="#" class="video" data-video="https://www.youtube.com/embed/bk2p-qS7gyA" data-toggle="modal"data-target="#videoModal"> <i class="fas fa-play fa-3x"></i> </a>
+          <a href="#" class="video p-5" data-video="https://www.youtube.com/embed/bk2p-qS7gyA" data-toggle="modal"data-target="#videoModal"> <i class="fas fa-play fa-3x"></i> </a>
         
         </div>
       </div>
@@ -181,31 +181,6 @@
   </section>
 
   <!-- VIDEO PLAY End -->
-
-  <br>
-
-  <!-- VIDEO PLAY  
-
-    <section id="video-play" class="">
-
-      <div class="dark-overlay">
-        <div class="row">
-          <div class="col">
-            <div class="container p-5">
-              <a href="#" class="video" data-video="https://www.youtube.com/embed/bk2p-qS7gyA" data-toggle="modal"
-              data-target="#videoModal">
-                <i class="fas fa-play fa-3x"></i>
-              </a>
-              <h3>See What We Do</h3>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-   -->
- 
-  <!-- VIDEO PLAY End-->
-
 
 
     <!-- VIDEO MODAL -->
