images added to S3

--- a/about.html
+++ b/about.html
@@ -108,7 +108,7 @@
              
 
               <div class="col">
-              <p><img src="img/amazon_search_autocomplete.png" class="img-fluid" alt="Amazon keyword tool">  </p>
+              <p><img src="https://rajecom.s3.eu-west-2.amazonaws.com/amazon_search_autocomplete.png" class="img-fluid" alt="Amazon keyword tool">  </p>
               </div>
 
               <h3>Keyword Tool</h3>
