--- a/contact.html
+++ b/contact.html
@@ -185,22 +185,22 @@
         <hr>
         <div class="row">
           <div class="col-md-3">
-            <img src="img/raj_profile_image.jpg" alt="" class="img-fluid rounded-circle mb-2">
+            <img src="https://rajecom.s3.eu-west-2.amazonaws.com/raj_profile_image.jpg" alt="" class="img-fluid rounded-circle mb-2">
             <h4>Rajneesh</h4>
             <small>Marketing Manager</small>
           </div>
           <div class="col-md-3">
-            <img src="img/raj_profile_image.jpg" alt="" class="img-fluid rounded-circle mb-2">
+            <img src="https://rajecom.s3.eu-west-2.amazonaws.com/raj_profile_image.jpg" alt="" class="img-fluid rounded-circle mb-2">
             <h4>Rajneesh</h4>
             <small>Business Manager</small>
           </div>
           <div class="col-md-3">
-            <img src="img/raj_profile_image.jpg" alt="" class="img-fluid rounded-circle mb-2">
+            <img src="https://rajecom.s3.eu-west-2.amazonaws.com/raj_profile_image.jpg" alt="" class="img-fluid rounded-circle mb-2">
             <h4>Rajneesh</h4>
             <small>CEO</small>
           </div>
           <div class="col-md-3">
-            <img src="img/raj_profile_image.jpg" alt="" class="img-fluid rounded-circle mb-2">
+            <img src="https://rajecom.s3.eu-west-2.amazonaws.com/raj_profile_image.jpg" alt="" class="img-fluid rounded-circle mb-2">
             <h4>Rajneesh</h4>
             <small>Web Developer</small>
           </div>
