--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <title>Keyword-tracker</title>
 </head>
 <body>
-    <header>
+    <header class="">
       <!-- Nav-bar -->
   <nav class="navbar navbar-expand-sm navbar-dark bg-info fixed-top">
     <div class="container">
@@ -76,7 +76,7 @@
           <div class="container">
             <div class="carousel-caption d-none d-sm-block mb-5">
               <h1 class="display-3 text-dark">Products Reasearch </h1>
-              <p class="lead text-light">Find high potential products to start dominating on Amazon.</p>
+              <p class="lead bg text-warning">Find high potential products to start dominating on Amazon.</p>
               <a href="contact.html" class="btn btn-primary btn-lg">Sign Up Now</a>
             </div>
           </div>
@@ -85,9 +85,8 @@
         <div class="carousel-item carousel-image-3">
           <div class="container">
             <div class="carousel-caption d-none d-sm-block text-right mb-5">
-              <h1 class="display-3">ASIN Tracker</h1>
-              <p class="lead">Showcasing the most up to date trends in the market, 
-                AMZ WordSpy only generates quality rich keyword lists to give you a definite competitive advantage.</p>
+              <h1 class="display-3 text-danger">ASIN Tracker</h1>
+              <span class="lead bg-light text-success">Showcasing the most up to date trends in the market, AMZ WordSpy only generates quality rich keyword lists to give you a definite competitive advantage.</span>
               <a href="about.html" class="btn btn-success btn-lg">Learn More</a>
             </div>
           </div>
@@ -131,11 +130,7 @@
   </section>
   <!--HOME ICON SECTION END  -->
 
-   <!-- HOME HEADING SECTION  2-->
-
-
-
-  <!-- HOME HEADING SECTION  2 End  -->
+ 
 
    <!-- PHOTO GALLERY 1.0 -->
 
@@ -152,7 +147,7 @@
           </div>
           <div class="col-md-6">
             <div class="col">
-            <img src="img/Selling_on_amazon.png" alt="" class="img-fluid">
+            <img src="https://rajecom.s3.eu-west-2.amazonaws.com/Selling_on_amazon.png" alt="" class="img-fluid">
             </div>
           </div>
         </div>
@@ -209,7 +204,7 @@
         </div>
         <div class="col-md-6">
           <div class="col">
-          <img src="img/Selling_on_amazon_2.png" alt="" class="img-fluid">
+          <img src="https://rajecom.s3.eu-west-2.amazonaws.com/Selling_on_amazon_2.png" alt="" class="img-fluid">
           </div>
         </div>
       </div>
