--- a/blog.html
+++ b/blog.html
@@ -72,7 +72,7 @@
           <div class="col">
             <div class="card-columns">
               <div class="card">
-                <img src="img/Blog-1.jpg" alt="" class="img-fluid card-img-top">
+                <img src="https://rajecom.s3.eu-west-2.amazonaws.com/Blog-1.jpg" alt="" class="img-fluid card-img-top">
                 <div class="card-body">
                   <h4 class="card-title">Blog Post One</h4>
                   <small class="text-muted">Written by Raj on 05/20</small>
@@ -90,7 +90,7 @@
             
 
               <div class="card">
-                <img src="img/Blog-2.jpg" alt="" class="img-fluid card-img-top">
+                <img src="https://rajecom.s3.eu-west-2.amazonaws.com/Blog-2.jpg" alt="" class="img-fluid card-img-top">
                 <div class="card-body">
                   <h4 class="card-title">Blog Post Two</h4>
                   <small class="text-muted">Written by Raj on 05/22</small>
@@ -108,7 +108,7 @@
           
 
               <div class="card">
-                <img src="img/Blog-3.jpg" alt="" class="img-fluid card-img-top">
+                <img src="https://rajecom.s3.eu-west-2.amazonaws.com/Blog-3.jpg" alt="" class="img-fluid card-img-top">
                 <div class="card-body">
                   <h4 class="card-title">Blog Post Three</h4>
                   <small class="text-muted">Written by Raj on 05/23</small>
