images added to S3

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           <div class="container">
             <div class="carousel-caption d-none d-sm-block text-right mb-5">
               <h1 class="display-3 text-danger">ASIN Tracker</h1>
-              <span class="lead bg-light text-success">Showcasing the most up to date trends in the market, AMZ WordSpy only generates quality rich keyword lists to give you a definite competitive advantage.</span>
+              <span class="lead text-success">Showcasing the most up to date trends in the market, AMZ WordSpy only generates quality rich keyword lists to give you a definite competitive advantage.</span>
               <a href="about.html" class="btn btn-success btn-lg">Learn More</a>
             </div>
           </div>
@@ -325,7 +325,7 @@
 </footer>
 <!-- FOOTER End-->
 
-</body>
+
     <script
   src="https://code.jquery.com/jquery-3.3.1.min.js"
   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
@@ -398,4 +398,5 @@ integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEUL
   }, false);
 })();
   </script>
+  </body>
 </html>
